<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog">

    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/regular"
        android:text="@string/filter"
        android:textColor="@color/black_lite"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <RadioButton
        android:id="@+id/chb_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/all"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/chb_pending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/task_waiting"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_all"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/chb_three_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/less_than_three_days"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_pending"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/chb_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/new_task"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_three_days"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/chb_submitted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/task_uploaded"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_new"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/chb_graded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/task_marked"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_submitted"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/chb_deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/item_radio_button"
        android:drawablePadding="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/deadline_passed"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_graded"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_light"
        android:fontFamily="@font/regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/qo_llash"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_deadline"
        app:layout_constraintWidth_percent="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/filterni_tozalash"
        android:textAllCaps="false"
        android:textColor="@color/color_filter"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        app:layout_constraintWidth_percent="0.9"
        app:strokeColor="@color/color_filter"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>