<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_hemis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/hemis"
        android:textColor="@color/blue_light"
        android:textSize="57sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_hemis_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/mobil_ilova_versiyasi_1_0_1"
        android:textColor="@color/grey_dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hemis"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/tv_rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/rate_us"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black_lite"
        android:layout_marginBottom="35dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_hemis_version"
        app:layout_constraintBottom_toTopOf="@id/ll_stars"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1" />

    <LinearLayout
        android:id="@+id/ll_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_rate">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_star" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_star" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_light"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/bizni_baholang"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>